--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ amqp==5.3.1
 bcrypt==4.2.0
 billiard==4.2.1
 blinker==1.9.0
+boto3==1.40.66
+botocore==1.40.66
 branca==0.8.1
 cachelib==0.13.0
 certifi==2025.1.31
@@ -29,6 +31,7 @@ gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
 kombu==5.5.4
 Mako==1.3.5
 MarkupSafe==3.0.1
@@ -50,6 +53,7 @@ redis==6.2.0
 reportlab==4.4.1
 requests==2.32.3
 resend==2.11.0
+s3transfer==0.14.0
 six==1.17.0
 SQLAlchemy==2.0.36
 text-unidecode==1.3
